fixed background image issue with board and out of places issue with the stones

--- a/client/resources/css/style.css
+++ b/client/resources/css/style.css
@@ -225,7 +225,7 @@ header {
 }
 
 .board-grid > div {
-	background: url(../old-painted-wood-2-900x900.jpg);
+	background: url(../media/old-painted-wood-2-900x900.jpg);
 	width: 90px;
 	height: 90px;
 	border: 0.1px solid rgba(0, 0, 0, 0.5);
